--- a/category-service-default.properties
+++ b/category-service-default.properties
@@ -1,3 +1,4 @@
+server.port=8765
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/dbkeda?charset=utf8mb4&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
